--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
       </div>
     </ons-toolbar>
     <ons-bottom-toolbar>
-      <div style="display:flex"><div style="width:40%">Version&nbsp;{{globals.version}}</div><div style="width:60%"><span style="float:right" *ngIf="(!globals.loaded.events&&globals.access.events>0)||(!globals.loaded.progs&&globals.access.progs>0)"><ons-icon icon="fa-spinner" spin="true" ></ons-icon> Loading <span *ngIf="!globals.loaded.progs" >Programmes...</span><span *ngIf="globals.loaded.progs&&!globals.loaded.events">Events...</span></span></div></div>
+      <div style="display:flex"><div style="width:40%">Version&nbsp;{{globals.version}}</div><div style="width:60%"><span style="float:right" *ngIf="(!globals.loaded.events&&globals.access.events>0)||(!globals.loaded.progs&&globals.access.progs>0)"><ons-icon icon="fa-compass" spin="true" ></ons-icon> Loading <span *ngIf="!globals.loaded.progs" >Programmes...</span><span *ngIf="globals.loaded.progs&&!globals.loaded.events">Events...</span></span></div></div>
 </ons-bottom-toolbar>
 
         <div class="content">
@@ -62,7 +62,7 @@
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"  [class.deact]="globals.access.events==0 " >
             <ons-icon icon="fa-cube" *ngIf="globals.loaded.events||globals.access.events==0"></ons-icon>
-            <ons-icon icon="fa-spinner" spin="true" *ngIf="!globals.loaded.events&&globals.access.events>0" ></ons-icon>
+            <ons-icon icon="fa-compass" spin="true" *ngIf="!globals.loaded.events&&globals.access.events>0" ></ons-icon>
             </div></div>
           <div class="member_name">Events</div>
          </div> 
@@ -71,22 +71,22 @@
            <div class="member_inner">
           <div class="member_box"><div class="member_initial" [class.deact]="globals.access.progs==0 ">
           <ons-icon *ngIf="globals.loaded.progs||globals.access.progs==0" icon="fa-cubes"></ons-icon>
-          <ons-icon spin="true" icon="fa-spinner" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon>
+          <ons-icon spin="true" icon="fa-compass" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon>
           </div></div>
           <div class="member_name">Programme</div>
          </div> 
       </div>
       <div class="member_outer" (click)="(globals.loaded.progs&&globals.access.progs>0)&&loadPage(rosta)">
            <div class="member_inner">
-          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-hands-helping" *ngIf="globals.loaded.progs||globals.access.progs==0"></ons-icon>
-          <ons-icon spin="true" icon="fa-spinner" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon>
+          <div class="member_box"><div class="member_initial" [class.deact]="globals.access.progs==0 "><ons-icon icon="fa-hands-helping" *ngIf="globals.loaded.progs||globals.access.progs==0"></ons-icon>
+          <ons-icon spin="true" icon="fa-compass" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon>
           </div></div>
           <div class="member_name">Parent Rosta</div>
          </div> 
       </div>
       <div class="member_outer" (click)="(globals.loaded.progs&&globals.access.progs>0)&&loadPage(leaderrosta)">
            <div class="member_inner">
-          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-users" *ngIf="globals.loaded.progs||globals.access.progs==0"></ons-icon><ons-icon spin="true" icon="fa-spinner" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon></div></div>
+          <div class="member_box"><div class="member_initial" [class.deact]="globals.access.progs==0 "><ons-icon icon="fa-users" *ngIf="globals.loaded.progs||globals.access.progs==0"></ons-icon><ons-icon spin="true" icon="fa-compass" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon></div></div>
           <div class="member_name">Meeting<br>Leadership</div>
          </div> 
       </div>
