--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -98,7 +98,7 @@
       </div> 
       <div class="member_outer" (click)="loadPage(termselect)">
            <div class="member_inner">
-          <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-calendar-alt"></ons-icon></div></div></div>
+          <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-calendar-check"></ons-icon></div></div></div>
           <div class="member_name">Terms</div>
          </div> 
       </div>
