--- a/src/app/progcard/summarytab/summarytab.component.html
+++ b/src/app/progcard/summarytab/summarytab.component.html
@@ -10,8 +10,8 @@
   <div *ngIf="i==0">The following Leaders are not available</div>
   {{ldr.firstname}}&nbsp;{{ldr.lastname}}
 </div>
-<div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div><br>
-<p (click)="go_lrosta($event,prog);"><ons-icon icon="fa-user-edit"  class="helper"></ons-icon>&nbsp;Update Leaders </p>
+<div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div>
+<p (click)="go_lrosta($event,prog);"><b><ons-icon icon="fa-user-edit"  class="helper"></ons-icon>&nbsp;Update Leaders></b></p>
 <div *ngIf="prog.items[0].leaders != ''" class="theadp" (click)="toggle('ln')"><div  class="theadl">Leader Notes</div><div class="theadr"><div id="ln_plus"><ons-icon icon="fa-plus-square" size="24px" class="helper"></ons-icon></div><div style="display: none" id="ln_minus"><ons-icon icon="fa-minus-square" size="24px" class="helper"></ons-icon></div></div></div> 
 <div style="display: none" *ngIf="prog.items[0].leaders != ''" class="theadb" id="ln">{{prog.items[0].leaders}}</div> 
 <p  class="subhead">Parent Helpers </p>
@@ -26,7 +26,7 @@
         <span class="list-item__subtitle">{{parentname(ldr.scoutid)}}</span>
   </ons-list-item>  
 </div>
-<p (click)="go_rosta($event,prog);"><ons-icon icon="fa-user-edit"  class="helper"></ons-icon>&nbsp;Update Helpers <span *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length)>0">({{prog.items[0].parentsrequired - prog.items[0].help.length}} more needed)</span></p>
+<p (click)="go_rosta($event,prog);"><b><ons-icon icon="fa-user-edit"  class="helper"></ons-icon>&nbsp;Update Helpers <span *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length)>0">({{prog.items[0].parentsrequired - prog.items[0].help.length}} more needed)</span></b></p>
 <!--<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) == 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more is needed</div>
 <div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) > 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more are needed</div>-->
 <br>
