--- a/src/app/qmcard/qmcard.component.html
+++ b/src/app/qmcard/qmcard.component.html
@@ -32,6 +32,6 @@
     <ons-card>
       Quantity: {{QMitem[6]}} (Condition:{{QMitem[5]}})<br>
       Broken: {{QMitem[7]}}<span *ngIf="!QMitem.hasOwnProperty('7')">0</span>
-      {{ac}}
+      {{$scope}}
     </ons-card>      
   </div>   
