--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -109,7 +109,19 @@
          </div> 
       </div>
 
-     
+ <div class="member_outer" (click)="download()">
+           <div class="member_inner">
+          <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-download"></ons-icon></div></div></div>
+          <div class="member_name">Download</div>
+         </div> 
+      </div>
+
+       <div class="member_outer" (click)="uploadPage()">
+           <div class="member_inner">
+          <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-upload"></ons-icon></div></div></div>
+          <div class="member_name">Upload</div>
+         </div> 
+      </div>     
     
       </div>
       
