--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -25,7 +25,6 @@
 <ons-list-item (click)="go($event,event);" modifier="chevron">
       
         <span class="left">
-        
               
         </span>
         <span class="list-item__title">  
@@ -34,8 +33,10 @@
           </span>
         <span class="list-item__subtitle">{{eventdates(event.startdate,event.enddate)}}</span>
         <span class="right" >
+          <div><div>  
            <ons-icon icon="fa-lock-open" style="color: limegreen;" *ngIf="signup(event.confdate) >= 0"></ons-icon>  
-         <ons-icon icon="fa-lock" style="color: grey;" *ngIf="signup(event.confdate) < 0"></ons-icon>&nbsp;
+         <ons-icon icon="fa-lock" style="color: grey;" *ngIf="signup(event.confdate) < 0"></ons-icon>&nbsp;</div>
+         <div *ngIf="is_shared(event)"><ons-icon icon="fa-share-alt" style="color: grey"></ons-icon></div></div>
          <div class="ecount" *ngIf="event_limit_inc(event.eventid)==0">
          <!--Total does not include LEaders-->
          <div class="top_ecount">
