--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -75,6 +75,12 @@
       </div>
     </ons-list>
   </ons-card>
+  <ons-card *ngIf="att_list==0&&((sharedS.items.length-1)>1)">
+   <p class="card_title"><ons-icon   icon="fa-share-alt" ></ons-icon>&nbsp;Shared Attendees</p>   
+   <div *ngFor="let att of sharedA.items ; index as z">
+     <div *ngIf="att.sectionid!=globals.mysection">{{att.firstname}}&nbsp;{{att.lastname}}</div> 
+   </div>   
+  </ons-card>  
   <ons-card *ngIf="att_list==0">  
   <ons-icon icon="fa-layer-group"></ons-icon>&nbsp;Attendees grouped by {{group_label[group_seg]}} <span *ngIf="notamember > 0">({{notamember}} former members are excluded from these totals)</span>
     <ons-segment #segment id="segment_summary" style="margin-top: 8px; width: 100%">
