--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -121,7 +121,14 @@
           <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-upload"></ons-icon></div></div></div>
           <div class="member_name">Upload</div>
          </div> 
-      </div>     
+      </div> 
+
+      <div class="member_outer" (click)="dropbox()">
+           <div class="member_inner">
+          <div class="member_box"><div class="circle"><div class="member_initial"><ons-icon icon="fa-dropbox"></ons-icon></div></div></div>
+          <div class="member_name">DropBox</div>
+         </div> 
+      </div>         
     
       </div>
       
