--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -32,11 +32,11 @@
           <div><div>  
            <ons-icon icon="fa-lock-open" style="color: limegreen;" *ngIf="event.signup >= 0" ></ons-icon>  
          <ons-icon icon="fa-lock" style="color: grey;" *ngIf="event.signup <0" ></ons-icon>&nbsp;</div>
-         <div *ngIf="event.shared" id ="is_shared(event,1)"><ons-icon icon="fa-share-alt" style="color: grey"></ons-icon></div><div *ngIf="event.sharee" id="is_shared(event,2)"><ons-icon icon="fa-link" style="color: grey"></ons-icon></div></div>
-         <div class="ecount" *ngIf="event.eventlimitldr==0" id ="event_limit_inc(event.eventid)==0">
+         <div *ngIf="event.shared" ><ons-icon icon="fa-share-alt" style="color: grey"></ons-icon></div><div *ngIf="event.sharee" ><ons-icon icon="fa-link" style="color: grey"></ons-icon></div></div>
+         <div class="ecount" *ngIf="event.eventlimitldr==0" >
          <!--Total does not include LEaders-->
          <div class="top_ecount">
-           <span class="notification {{event.class}} _class(event.eventid)">{{event.count}}<span *ngIf="event_limit(event.eventid)>0">/{{event.eventlimit}}</span></span>
+           <span class="notification {{event.class}}" >{{event.count}}<span *ngIf="event.eventlimit>0">/{{event.eventlimit}}</span></span>
          </div>
          <div class="bot_ecount">
            &amp;&nbsp;{{event.countL}}L
@@ -45,7 +45,7 @@
          <div class="ecount" *ngIf="event.eventlimitldr==1">
          <!--Total does include LEaders-->
          <div class="top_ecount">
-           <span class="notification {{event_class(event.eventid)}}">{{event.count}}+{{event.countL}}L</span>
+           <span class="notification event.class}}">{{event.count}}+{{event.countL}}L</span>
          </div>
          <div class="bot_ecount">
            of {{event.eventlimit}}
