--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -22,7 +22,7 @@
   <p *ngIf="signup(eventA.confdate) > 0"><ons-icon icon="fa-check-circle" style="color:green;"></ons-icon>&nbsp;Signup closes in {{signup(eventA.confdate)}} day<span *ngIf="signup(eventA.confdate) > 1">s</span> on {{eventdates(eventA.confdate)}}.</p>
   <p *ngIf="(signup(eventA.confdate) < 0) && (eventA.confdate != '1970-01-01')"><ons-icon icon="fa-times-circle" style="color:red;"></ons-icon>&nbsp;Signup closed  on {{eventdates(eventA.confdate)}}.</p>
   <p *ngIf="invites_sent(true) == 0"><ons-icon icon="fa-exclamation-circle" style="color:red;"></ons-icon>&nbsp;No invites sent<p>
-  <p *ngIf="shared>1"><ons-icon icon="fa-share-alt" style="color: grey"></ons-icon> You have shared this event with {{shared}} sections</p>
+  <p *ngIf="shared>0"><ons-icon icon="fa-share-alt" style="color: grey"></ons-icon> You have shared this event with {{shared}} section<span*ngIf="shared>1">s</span></p>
   <p *ngIf="sharee==true"><ons-icon icon="fa-link" style="color: grey"></ons-icon> Another section shared this event with you</p>
  <!-- <p *ngIf="invites_sent(false) != 0"> {{invites_sent()}} have not been invited</p> -->  
 </ons-card>  
