--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -4,8 +4,8 @@
 </ons-card>
 <ons-card>
  <span *ngIf="shared||sharee"> 
- <span *ngIf="li.maxplaces_share>0">There is a shared total of {{li.maxplaces_share}} places available for this event<span *ngIf="li.maxplaces>0">, your section has limit of {{li.maxplaces}} places</span>.</span>
- <span *ngIf="li.maxplaces_share==0">There is no shared maximum for this event<span *ngIf="li.maxplaces>0"> but your section has limit of {{li.maxplaces}} places</span>.</span>
+ <span *ngIf="li.maxplaces_share>0">There is a shared total of {{li.maxplaces_share}} places available for this event<span *ngIf="li.maxplaces>0"><span *ngIf="li.maxplaces_incldr_share==1"> including leaders</span>, your section has limit of {{li.maxplaces}} places<span *ngIf="li.maxplaces_incldr==1"> including leaders</span></span>.</span>
+ <span *ngIf="li.maxplaces_share==0">There is no shared maximum for this event<span *ngIf="li.maxplaces>0"> but your section has limit of {{li.maxplaces}} places<span *ngIf="li.maxplaces_incldr"> including leaders</span></span>.</span>
  </span>   
 </ons-card>       
   <ons-card >
