--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -5,7 +5,8 @@
 <ons-card>
  <span *ngIf="shared||sharee"> 
  <span *ngIf="li.maxplaces_share>0">There is a shared total of {{li.maxplaces_share}} places available for this event<span *ngIf="li.maxplaces>0"><span *ngIf="li.maxplaces_incldr_share==1"> including leaders</span>, your section has limit of {{li.maxplaces}} places<span *ngIf="li.maxplaces_incldr==1"> including leaders</span></span>.</span>
- <span *ngIf="li.maxplaces_share==0">There is no shared maximum for this event<span *ngIf="li.maxplaces>0"> but your section has limit of {{li.maxplaces}} places<span *ngIf="li.maxplaces_incldr"> including leaders</span></span>.</span>
+ <span *ngIf="li.maxplaces_share==0">There is no shared maximum for this event<span *ngIf="li.maxplaces>0"> but your section has limit of {{li.maxplaces}} places<span *ngIf="li.maxplaces_incldr==1"> including leaders</span></span>.</span>
+ <span *ngIf="(shared)&&(li.maxplaces_share>0)"><p> There are {{li.maxplaces_share-li.total_leaders_mysec-total_members_mysec-total_leaders_othersec-total_members_othersec}} places remaining.</p></span>  
  </span>   
 </ons-card>       
   <ons-card >
